@@ -1,3 +1,8 @@
+* Fri Aug 09 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.3.0-0
+- Remove Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+
 * Tue Jan 15 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.0
 - Update documentation
 - Add acceptance tests for obtaining certs via CMC and certmonger
